Bug 1102791 - Always return NS_FRAME_COMPLETE status from nsHTMLButtonControlFrame::Reflow.  Don't create overflow container continuations unless the delegating frame has eCanContainOverflowContainers. r=roc